bin_PROGRAMS = oftpd
oftpd_SOURCES = src/file_list.c 	\
		src/file_list.h 	\
		src/ftp_command.c 	\
		src/ftp_command.h 	\
		src/ftp_listener.c 	\
		src/ftp_listener.h 	\
		src/ftp_session.c 	\
		src/ftp_session.h 	\
		src/oftpd.c 		\
		src/oftpd.h 		\
		src/telnet_session.c 	\
		src/telnet_session.h 	\
		src/watchdog.c 		\
		src/watchdog.h 		\
		src/error.c 		\
		src/error.h 		\
		src/af_portability.h 	\
		src/daemon_assert.c 	\
		src/daemon_assert.h
dist_man_MANS = man/oftpd.8
EXTRA_DIST = BUGS FAQ
